--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.6",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@geist-ui/react": "^2.2.5",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.4",
     "@hookform/resolvers": "^3.6.0",
@@ -22,13 +24,17 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-table": "^8.17.3",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "cross-fetch": "^4.0.0",
     "date-fns": "^3.6.0",
     "font-awesome-icons": "^1.6.0",
     "framer-motion": "^11.2.10",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.0",
     "lucide-react": "^0.394.0",
     "next": "14.2.4",
     "next-seo": "^6.5.0",
